May 02, 2023
  renamed git branch 'master' to 'main'

Apr 25, 2023
  renamed distro to 'notification-pipeline'

Jan 27, 2023
  updated build.gradle to be gradle 6.x + compatible
  RGDD-2148: Reference links now go to RGD reference pages.

Jun 13, 2022
  tuned up logging

Apr 12, 2022
  updated prod db name

Mar 14, 2022
  updated ojdbc

Feb 01, 2022
  updated log4j to avoid zero day exploit

May 10, 2020
  updated jar dependencies

Jan 09 2020
  simplified master script; added debug cmdline param

ver 2.0.0, Oct 1 2018
  moved from subversion to github