@@ -1,0 +1,26 @@
+<footer id="footer">
+    <div style="background-color: #2865A3; color:white">
+        <table align="center"> <tbody><tr><td align="left" style="color:white;">
+            <a href="https://rgd.mcw.edu/rgdweb/contact/contactus.html">Contact Us</a>&nbsp;|&nbsp;
+            <a href="https://rgd.mcw.edu/wg/about-us">About Us</a>&nbsp;|&nbsp;
+            <a href="https://creativecommons.org/licenses/by/4.0/">License CC BY 4.0</a>&nbsp;|&nbsp;
+            <a href="https://rgd.mcw.edu/wg/home/disclaimer">Legal Disclaimer</a>&nbsp;|&nbsp;
+            <a href="https://www.mcw.edu/">© Medical College of Wisconsin</a>
+        </td></tr></tbody></table>
+    </div>
+
+    <table align="center">
+        <tbody><tr>
+            <td width="100" align="center"><a href="https://www.nhlbi.nih.gov/"><img src="https://rgd.mcw.edu/rgdweb/common/images/nhlbilogo.gif" alt="NHLBI Logo" title="National Heart Lung and Blood Institute"></a><br><br></td>
+            <td width="100" align="center"><a href="https://www.nih.gov/"><img src="https://rgd.mcw.edu/rgdweb/common/images/nih.png" alt="NHLBI Logo" title="National Institute of Health"></a><br><br></td>
+            <td width="100" align="center"><a href="https://alliancegenome.org"><img src="https://rgd.mcw.edu/rgdweb/common/images/alliance_logo.png" height="80" width="133" border="0/"></a></td>
+            <td width="100" align="center"><a href="https://globalbiodata.org/scientific-activities/global-core-biodata-resources"><img src="https://rgd.mcw.edu/rgdweb/common/images/gbc-main.svg" height="80" width="133" border="0/"></a></td>
+        </tr>
+        </tbody></table>
+
+    <p align="center">RGD is funded by grant HL64541 from the National Heart, Lung, and Blood Institute on behalf of the NIH.</p>
+
+    <p align="center">Click <a href='https://rgd.mcw.edu/rgdweb/my/login.html'>here</a> to unsubscribe</p>
+
+</div>
+</footer>
